--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>沙鹿小隊隊伍資料閱讀器（離線測試）</title>
-  <link rel="stylesheet" href="styles.css?v=20260212-12" />
+  <title>非官方殺戮小隊閱讀器（測試）</title>
+  <link rel="stylesheet" href="styles.css?v=20260212-19" />
 </head>
 
 <body>
   <div class="app">
     <header class="top">
-      <h1>KT 隊伍資料閱讀器（測試版）</h1>
+      <h1>非官方殺戮小隊閱讀器（測試）</h1>
       <!-- <div class="hint">目前載入 3 隊：偵查狼殺戮小隊/瘟疫戰士/風暴飛鷹。</div> -->
     </header>
 
@@ -47,6 +47,12 @@
         <div class="panel-body" id="detailView"></div>
       </section>
     </main>
+    <footer class="site-disclaimer">
+      本網站為非官方粉絲製作工具，與 Games Workshop 無任何隸屬或授權關係。一切資料皆是
+      <a href="https://www.warhammer-community.com/en-gb/downloads/kill-team/" target="_blank"
+        rel="noopener noreferrer">https://www.warhammer-community.com/en-gb/downloads/kill-team/</a>
+      線上公開的免費資訊，沒有包含任何需付費（實體規則書）內容。
+    </footer>
   </div>
   <div class="floating-actions" aria-label="快速操作">
     <button id="openScoreBtn" class="score-fab" type="button">
@@ -61,16 +67,19 @@
     <button id="resetPloyChecksBtn" class="reset-ploy-fab" type="button">
       重置計謀/裝備勾選
     </button>
+    <button id="toggleScriptBtn" class="script-mode-fab" type="button">
+      簡/繁
+    </button>
   </div>
   <div id="scoreOverlay" class="score-overlay is-hidden" aria-hidden="true">
     <div class="score-panel" role="dialog" aria-modal="true" aria-label="計分頁面">
       <div class="score-head">
-        <h3>計分面板</h3>
+        <h3>計分</h3>
         <div class="score-timer">
           <span id="scoreTimerDisplay">00:00</span>
           <button id="scoreTimerStartBtn" class="score-close" type="button">開始計時</button>
-          <button id="scoreTimerPauseBtn" class="score-close is-hidden" type="button">暫停計時</button>
-          <button id="scoreTimerEndBtn" class="score-close is-hidden" type="button">結束計時</button>
+          <button id="scoreTimerPauseBtn" class="score-close is-hidden" type="button">暫停</button>
+          <button id="scoreTimerEndBtn" class="score-close is-hidden" type="button">結束</button>
         </div>
         <button id="closeScoreBtn" class="score-close" type="button">關閉</button>
       </div>
@@ -259,8 +268,8 @@
       </div>
       <div class="score-foot">
         <button id="scoreResetBtn" type="button" class="score-reset-btn">重置計分</button>
-        <button id="scoreResetLogBtn" type="button" class="score-reset-btn">重置遊玩過程</button>
-        <button id="scoreResetAllBtn" type="button" class="score-reset-btn">全部重置</button>
+        <button id="scoreResetLogBtn" type="button" class="score-reset-btn">重置過程</button>
+        <button id="scoreResetAllBtn" type="button" class="score-reset-btn">清除</button>
         <button id="scoreExportBtn" type="button" class="score-reset-btn">匯出圖片</button>
       </div>
     </div>
@@ -270,7 +279,7 @@
       {"version":"fallback","teams":[]}
     </script>
 
-  <script src="app.js?v=20260212-12"></script>
+  <script src="app.js?v=20260212-29"></script>
 </body>
 
 </html>
