--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
   <title>非官方殺戮小隊閱讀器（測試）</title>
-  <link rel="stylesheet" href="styles.css?v=20260212-19" />
+  <link rel="stylesheet" href="styles.css?v=20260212-19aaa" />
 </head>
 
 <body>
@@ -291,7 +291,7 @@
       {"version":"fallback","teams":[]}
     </script>
 
-  <script src="app.js?v=20260213-31"></script>
+  <script src="app.js?v=20260213-31aaa"></script>
 </body>
 
 </html>
