--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <main class="content">
       <section class="panel">
         <div class="panel-title panel-title-with-action">
-          <span>特工清單</span>
+          <span id="listPanelTitle">特工清單</span>
           <div class="panel-title-actions">
             <button id="openSelectionRulesBtn" class="panel-action-btn" type="button">特工選擇規則</button>
             <button id="unitFilterBtn" class="panel-action-btn" type="button">單位：顯示全部</button>
