--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div class="app">
     <header class="top">
       <h1>非官方殺戮小隊閱讀器（測試）</h1>
+      <small>官方更新版本：25/02/2026 /<br> 閱讀器更新時間：28/02/2026</small>
       <!-- <div class="hint">目前載入 3 隊：偵查狼殺戮小隊/瘟疫戰士/風暴飛鷹。</div> -->
     </header>
 
@@ -20,7 +21,8 @@
         切換隊伍
         <div class="team-select-row">
           <select id="teamSelect"></select>
-          <input id="teamPinCheckbox" class="team-pin-checkbox" type="checkbox" aria-label="優先排序目前隊伍" title="優先排序目前隊伍" />
+          <input id="teamPinCheckbox" class="team-pin-checkbox" type="checkbox" aria-label="優先排序目前隊伍"
+            title="優先排序目前隊伍" />
         </div>
       </label>
       <label class="font-size-control">
